progress sblm presentasi

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                 <p class="text-white text-xl text-center pt-3 2xl:pt-7 xl:pt-5 md:pt-5 2xl:mt-2 2xl:text-3xl xl:text-2xl md:text-2xl md:text-center xl:text-left animate__animated animate__fadeInUp">Tetap Nyaman di ruangan Anda, Kami akan memberikan <strong>layanan terbaik</strong> untuk pendingin ruangan Anda</p>
                 <div class="flex place-content-center pt-2 2xl:pt-14 xl:pt-14 md:pt-4 md:place-content-center xl:place-content-end 2xl:place-content-end mt-4 md:pt-0 animate__animated animate__fadeInUp">
                     <button type="button" class="flex items-center md:text-1xl 2xl:text-2xl xl:text-1xl text-white text-bold rounded-full font-semibold px-8 py-2 mr-4 bg-green-400 hover:bg-green-700">
-                    Kunjungi Kami</button>
+                    <a href="#kontak">Kunjungi Kami</a></button>
                 </div>
             </div>
             <div class="relative flex pt-10 2xl:pt-72 xl:pt-24 md:pt-42">
@@ -177,14 +177,14 @@
     </div>
     <div data-aos="fade-left" data-aos-duration="3000">
         <p class="text-center text-xl md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 xl:pt-5">Servis Rutin Tiap Bulan</p>
-        <p class="text-center text-xl md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Anda tidak perlu lagi hawatir lupa servis tiap bulan, tim kami akan mengingatkan Anda sehingga Ac Anda akan terhindar dari kuman dan debu</p>
+        <p class="text-center text-xl md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Anda tidak perlu lagi khawatir lupa servis tiap bulan, tim kami akan mengingatkan Anda sehingga AC Anda akan terhindar dari kuman dan debu</p>
     </div>
     <div data-aos="fade-right" data-aos-duration="3000">
         <img src="/public/img/unit-baru.png" class="pl-24" style="width: 25rem;" alt="">
     </div>
     <div data-aos="fade-left" data-aos-duration="3000">
         <p class="text-center text-xl md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 pt-5">Unit Ganti Baru</p>
-        <p class="text-center text-xl md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Jika unit masaih dalam masa garansi akan kami ganti dengan unit yang baru tidak perlu khawatir dengan biaya tambahan lainnya</p>
+        <p class="text-center text-xl md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Jika unit masih dalam masa garansi akan kami ganti dengan unit yang baru tidak perlu khawatir dengan biaya tambahan lainnya</p>
     </div>
     <div data-aos="fade-right" data-aos-duration="3000">
         <img src="/public/img/call-center.png" class="pl-24" style="width: 25rem;" alt="">
@@ -197,7 +197,7 @@
         <img src="/public/img/garansi.png" class="pl-24" style="width: 25rem;" alt="">
     </div>
     <div data-aos="fade-left" data-aos-duration="3000">
-        <p class="text-center text-xl md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3">Garansi AC Dingin</p>
+        <p class="text-center text-xl md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 pt-5">Garansi AC Dingin</p>
         <p class="text-center text-xl md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Tidak hanya unit yang Kami garansikan, tapi Kami menggaransikan AC tetap dingin untuk kenyamanan Anda di ruangan</p>
     </div>
 </div>
@@ -337,7 +337,7 @@
                             <li class="pt-1 pb-2"><a href="#layanan"> Layanan </a></li>
                             <li class="pt-1 pb-2"><a href="#produk"> Produk </a></li>
                             <li class="pt-1 pb-2"><a href="#keunggulan"> Keunggulan </a></li>
-                            <li class="pt-1 pb-2"><a href="#cabang"> Cabang </a></li>
+                            <li class="pt-1 pb-2"><a href="#cabang"> Kantor Cabang </a></li>
                             <li class="pt-1 pb-2"><a href="#kontak"> Kontak </a></li>
                         </ul>
                     </div>
